--- a/ntchalloween/Bats_Rob.css
+++ b/ntchalloween/Bats_Rob.css
@@ -4,10 +4,11 @@
 
 body {
   position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+   width: 0%;
+ height: 0%;
+ margin: 0;
+ overflow: hidden;  <!-- /*Hidden the scroll*/ -->
+ padding: 0;
   background: url('NTC.png')/*Wallpaper*/ center/cover fixed, #000
 }
 
