--- a/test/xat5/trans.css
+++ b/test/xat5/trans.css
@@ -5,7 +5,7 @@
   color: #d5b0ff;
   font-size: 10px;
   text-align: center;
-  font-family: 'Orator Std', sans-serif;
+  font-family: 'Orator Std';
   font-weight: 5;
   position: absolute;
   left: 9vh;
