--- a/ocean/opblue/Fonts.css
+++ b/ocean/opblue/Fonts.css
@@ -1,4 +1,4 @@
 @font-face {
-	font-family:Futura-Bold;
-	src:url(fonts/Futura Bold.woff);
+	font-family:OratorStd;
+	src:url(fonts/OratorStd.woff);
 }
